--- a/styles.css
+++ b/styles.css
@@ -309,4 +309,23 @@ margin-right: 20px;
   .view-all-btn:hover {
     background-color: #f0f8ff;
   } 
-  
+  @media (max-width: 980px) {
+    .card-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-left: 10px;
+     flex-direction: column;
+      margin-bottom: 50px;
+      color: #050505;
+  }
+  .request-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+   gap:30px;
+   margin-bottom: 50px;
+   
+  }
+  }
